[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Fonts/stormfaze.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/ShipInside/ShipOutside.png" type="Texture" id=2]
[ext_resource path="res://Assets/BCG/background.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Levels/Endgame.gd" type="Script" id=4]
[ext_resource path="res://Assets/Particles/smoke.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -173.673, 285.05 ), Vector2( 1600, 285.05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label4:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="DynamicFont" id=4]
size = 86
font_data = ExtResource( 1 )

[node name="Endgame" type="Node2D"]
script = ExtResource( 4 )

[node name="background" type="Sprite" parent="."]
position = Vector2( -1026.41, 300.453 )
texture = ExtResource( 3 )

[node name="Label2" type="Label" parent="."]
margin_left = 756.0
margin_top = 520.0
margin_right = 1012.0
margin_bottom = 576.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 0.509804, 1 )
text = "Click anywhere to exit the game"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_right = 1021.0
margin_bottom = 289.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 0.509804, 1 )
text = "Thank you for playing"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -173.673, 285.05 )
rotation = 1.5708
texture = ExtResource( 2 )
hframes = 7
frame = 6

[node name="CPUParticles2D" type="CPUParticles2D" parent="Sprite"]
position = Vector2( -56.9137, 138.869 )
amount = 4
texture = ExtResource( 5 )
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
radial_accel = 57.14

[node name="CPUParticles2D2" type="CPUParticles2D" parent="Sprite"]
position = Vector2( 68.1029, 144.2 )
amount = 4
texture = ExtResource( 5 )
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
radial_accel = 57.14

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/End = SubResource( 3 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 1021.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
visible = false
margin_top = 289.0
margin_right = 1022.0
margin_bottom = 576.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 0.509804, 1 )
text = "Alone in the universe"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
